--- a/index.html
+++ b/index.html
@@ -19,48 +19,38 @@
                 Sorry, your browser does not support inline SVG.
             </svg>
             <div class="col-2">
-                <div class="skl-title">
-                    <a class="skl-more">info</a>
-                    <i class="fas fa-book book"></i>
+                <div id="showmenu" class="skl-title">
+                    <!--<a class="skl-more">Menu</a>-->
+                    <i class="fas fa-chevron-circle-down"></i>
                 </div>
             </div>
         </div>
     </header>
     <!--//////////////////////////-->
-    <!--//////////////////////////
-    <div id="hbd">
+    <div id="menu">
         <div class="row">
-            <div class="col-5">
-                <div id="bn" style="cursor: pointer;">click</div>
-                <div class="hbd-map">
-                    <div class="hbd-title">JAVA</div>
-                    <div class="carga-c"></div>
-                    <div class="carga" id="cargando"></div>
+            <div class="fas fa-window-close m-close"></div>
+            <div class="col-7">
+                <div class="c-4 c-1" id="about">
+                    <div id="m-sb" class="m-item">Sobre Mi</div>
+                    <div id="m-sb-s" class="m-pr"> Conoceras un pedasito de mi</div>
                 </div>
-                <div class="hbd-map">
-                    <div class="hbd-title">Spring</div>
-                    <div class="carga-c"></div>
-                    <div class="carga"></div>
+                <div class="c-4 c-2">
+                    <div id="m-sk" class="m-item">Skilss</div>
+                    <div  class="m-pr"> habilidades que adquiri a lo largo del camino.</div>
                 </div>
-                <div class="hbd-map">
-                    <div class="hbd-title">Spring</div>
-                    <div class="carga-c"></div>
-                    <div class="carga"></div>
+                <div class="c-4 c-3">
+                    <div id="m-pt" class="m-item">Proyectos</div>
+                    <div id="m-pt-s" class="m-pr"> Conoceras un pedasito de mi</div>
                 </div>
-                <div class="hbd-map">
-                    <div class="hbd-title">Spring</div>
-                    <div class="carga-c"></div>
-                    <div class="carga"></div>
-                </div>
-                <div class="hbd-map">
-                    <div class="hbd-title">Spring</div>
-                    <div class="carga-c"></div>
-                    <div class="carga"></div>
+                <div class="c-4 c-0">
+                    <div id="m-ct" class="m-item">Contactar</div>
+                    <div class="m-pr"> Conoceras un pedasito de mi</div>
                 </div>
             </div>
         </div>
     </div>
-    //////////////////////////-->
+    <!--//////////////////////////-->
     <article id="file">
         <div class="row file-d">
             <div class="col-4">
@@ -101,12 +91,57 @@
     </div>
     <!--//////////////////////////-->
     <div id="sk">
-        <div class="row">
-            <div class="sk-title">SKILSS</div>
+        <div class="sk-row">
+            <div class="sk-title">
+                <div class="sk-t">Conocimiento</div>
+                <div class="fas fa-window-close sk-close"></div>
+            </div>
             <div class="col-6">
-                <div class="sk-ic">JAVA</div>
-                <div class="sk-ic">SPRING</div>
-                <div class="sk-ic">SQL</div>
+                <div class="sk-ic">
+                    <div class="sk-tc">Java</div>
+                    <div class="sk-frw sk-frw-1">70%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
+                <div class="sk-ic">
+                    <div class="sk-tc">SPRING </div>
+                    <div class="sk-frw sk-frw-2">50%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
+                <div class="sk-ic">
+                    <div class="sk-tc">SQL</div>
+                    <div class="sk-frw sk-frw-3">76%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
+                <div class="sk-ic">
+                    <div class="sk-tc">JavaScript</div>
+                    <div class="sk-frw sk-frw-4">60%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
+                <div class="sk-ic">
+                    <div class="sk-tc">NodeJS</div>
+                    <div class="sk-frw sk-frw-5">50%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
+                <div class="sk-ic">
+                    <div class="sk-tc">Bootstrap</div>
+                    <div class="sk-frw sk-frw-6">90%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
+                <div class="sk-ic">
+                    <div class="sk-tc">Excel</div>
+                    <div class="sk-frw sk-frw-7">78%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
+                <div class="sk-ic">
+                    <div class="sk-tc">HTML5</div>
+                    <div class="sk-frw sk-frw-8">76%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
+                <div class="sk-ic">
+                    <div class="sk-tc">CSS</div>
+                    <div class="sk-frw sk-frw-9">87%</div>
+                    <div class="fas fa-plus-circle sk-plus"></div>
+                </div>
             </div>
         </div>
     </div>
