--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 Sorry, your browser does not support inline SVG.
             </svg> -->
             <div class="col-2">
-                <div id="showmenu" class="skl-title" >
+                <div id="showmenu" class="skl-title">
                     <!--<a class="skl-more">Menu</a>-->
                     <i class="fas fa-chevron-circle-down" onclick="showMenu()"></i>
                 </div>
@@ -35,12 +35,12 @@
             <div class="fas fa-window-close m-close" id="closemenu" onclick="closeMenu()"></div>
             <div class="col-7">
                 <div class="c-4 c-1" id="about">
-                    <div id="m-sb" class="m-item">Sobre Mi</div>
+                    <div id="m-sb" class="m-item" onclick="showAB()">Sobre Mi</div>
                     <div id="m-sb-s" class="m-pr"> Conoceras un pedasito de mi</div>
                 </div>
                 <div class="c-4 c-2">
                     <div id="m-sk" class="m-item" onclick="showSkill()">Skilss</div>
-                    <div  class="m-pr"> habilidades que adquiri a lo largo del camino.</div>
+                    <div class="m-pr"> habilidades que adquiri a lo largo del camino.</div>
                 </div>
                 <div class="c-4 c-3">
                     <div id="m-pt" class="m-item">Proyectos</div>
@@ -69,6 +69,68 @@
                         <div class="social">
                             <div class="social-ic"><i class="fab fa-github ic"></i></div>
                             <div class="social-ic"><i class="fab fa-linkedin-in ic"></i></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--//////////////////////////-->
+    <div id="ab-about">
+        <div class="row ab-row">
+            <div class="col-8">
+                <div class="ab-e">
+                    <div class="ab-prt">
+                        <div class="ab-logo">LOGO</div>
+                        <div class="ab-enc">
+                            <div class="ab-title">
+                                <div>Lucas Reina</div>
+                                <div class="ab-close fas fa-window-close" onclick="closeAB()"></div>
+                            </div>
+                            <div class="ab-sl">Programador</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="ab-carrera">
+                    <div class="ab-ca-title">
+                        <div>Estudios</div>
+                    </div>
+                    <div class="ab-mod">
+                        <div class="ab-ca-mod ab-mg">
+                            <div class="ab-ca-1">Tec.En Sistemas Informaticos</div>
+                            <div class="ab-ca-p">GN Mexico</div>
+                            <div class="ab-ca-p">Culminado</div>
+                        </div>
+                        <div class="ab-ca-mod">
+                            <div class="ab-ca-1">Ing. en Sistemas</div>
+                            <div class="ab-ca-p">Universidad Tecnologica de Panamá</div>
+                            <div class="ab-ca-p">Año: 2020 / Actualidad</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="ab-carrera">
+                    <div class="ab-ca-title">
+                        <div>Certificados</div>
+                    </div>
+                    <div class="ab-mod">
+                        <div class="ab-ca-mod ab-mg">
+                            <div class="ab-ca-1">JAVA</div>
+                            <div class="ab-ca-p">LINK</div>
+                            <div class="ab-ca-p">Culminado</div>
+                        </div>
+                        <div class="ab-ca-mod ab-mg">
+                            <div class="ab-ca-1">SQL</div>
+                            <div class="ab-ca-p">LINK</div>
+                            <div class="ab-ca-p">Año: 2020 / Actualidad</div>
+                        </div>
+                        <div class="ab-ca-mod">
+                            <div class="ab-ca-1">PHP</div>
+                            <div class="ab-ca-p">Gobierno Nacional de Mexico</div>
+                            <div class="ab-ca-p">Culminado</div>
                         </div>
                     </div>
                 </div>
